# rules-rust-bug

./: BUILD.bazel  README.md  WORKSPACE.bazel  lib.rs  write_rs.bzl
